--- a/docs/documentacion.tex
+++ b/docs/documentacion.tex
@@ -44,9 +44,9 @@ Monte Carlo Tree Search, MCTS, Upper Confidence Bound for Trees, UCT, Othello, O
 
 % ---------- Secciones ----------
 \section{Introducción}
-En muchos juegos podemos ver IA's que nos permiten jugar contra ellas, ya sea como forma de introducirnos en el juego, o como maximo exponente del mismo.
+En muchos juegos podemos ver IA's que nos permiten jugar contra ellas \cite{russell2020}, ya sea como forma de introducirnos en el juego, o como maximo exponente del mismo.
 Con el objetivo de aprender a crearlas, hemos creado una IA que aprende a jugar al juego de Otelo, para ello logramos crear un conjunto de datos con un
-algoritmo base (Montecarlo) y posteriormente usamos esos datos para entrenar una red neuronal implementada en ese mismo algoritmo que pudiera perfeccionar las jugadas a lo largo de la 
+algoritmo base (Monte Carlo Tree Search, MCTS) y posteriormente usamos esos datos para entrenar una red neuronal implementada en ese mismo algoritmo que pudiera perfeccionar las jugadas a lo largo de la 
 partida. En este documento estudiaremos como hemos logrado implementar todo esto, además de los resultados obtenidos al enfrentar la IA con red neuronal,
 contra la que no tenia. Las principales dificultades al plantearnos esta tarea fueron, la elección de la estructura de la red neuronal y sus hiperparámetros, pues para
 que la red mejorará había que elegir una tasa de aprendizaje efectiva y era imperativo el hacer una elección lógica de la arquitectura, puesto que hay numerosas
@@ -62,7 +62,7 @@ Para el diseño y entrenamiento de la red usamos tensorflow y keras, y para el t
 estos datos.
 
 \section{Implementación}
-Para la implementación del proyecto se han realizado los siguientes pasos: se ha creado una versión inicial de Otelo utilizando Pygame, se ha creado un agente básico utilizando el algoritmo de Monte Carlo Tree Search, se han generado datos a partir de ese agente básico, se ha creado y, posteriormente, entrenado una red neuronal a partir de los datos generados, se ha utilizado la red neuronal como sustituta de una de las funciones de las que hace uso la implementación inicial del algoritmo MCTS y, finalmente, se ha adaptado la versión inicial de Otelo (en la que no se podía jugar contra ningún adversario) para que el agente desarrollado pudiese jugar contra el usuario.
+Para la implementación del proyecto se han realizado los siguientes pasos: se ha creado una versión inicial de Otelo utilizando Pygame, se ha creado un agente básico utilizando el algoritmo de Monte Carlo Tree Search \cite{browne2012}, se han generado datos a partir de ese agente básico, se ha creado y, posteriormente, entrenado una red neuronal a partir de los datos generados, se ha utilizado la red neuronal como sustituta de una de las funciones de las que hace uso la implementación inicial del algoritmo MCTS y, finalmente, se ha adaptado la versión inicial de Otelo (en la que no se podía jugar contra ningún adversario) para que el agente desarrollado pudiese jugar contra el usuario.
 
 A continuación, desarrollamos la implementación de cada uno de los pasos mencionados.
 
@@ -232,8 +232,8 @@ Ambos mecanismos fueron esenciales para automatizar el control del entrenamiento
 
 En cuanto a las pruebas realizadas al agente MCTS final, se han dividido en dos tipos de pruebas: las pruebas "IA contra IA" y las pruebas "IA contra humano".
 
-\subsubsection{Pruebas IA contra IA}
-para evaluar realmente la utilidad de la red neuronal, vimos necesario enfrentar a los dos agentes MCTS creados, tanto el que cuenta con una red neuronal como el que no hace uso de esta. Para ello, contamos con el script \texttt{otelo\_ia\_vs\_ia.py} que ejecuta el Otelo implementado de manera normal, solo que el usuario no puede interferir en la partida y sólo puede observar las distintas acciones que llevan a cabo los dos agentes.
+\subsection{Pruebas IA contra IA}
+Para evaluar realmente la utilidad de la red neuronal, vimos necesario enfrentar a los dos agentes MCTS creados, tanto el que cuenta con una red neuronal como el que no hace uso de esta. Para ello, contamos con el script \texttt{otelo\_ia\_vs\_ia.py} que ejecuta el Otelo implementado de manera normal, solo que el usuario no puede interferir en la partida y sólo puede observar las distintas acciones que llevan a cabo los dos agentes.
 
 Las pruebas consistieron en jugar distintas partidas modificando el número de iteraciones del algoritmo MCTS tanto para un agente como para el otro. Primero se jugaron quince partidas en las que ambos agentes realizaban el mismo número de iteraciones (ochenta, concretamente). Posteriormente, se jugaron otras quince partidas en las que el agente MCTS "clásico" (es decir, el que no utiliza la red neuronal) realizaba cien iteraciones y el agente de la red neuronal realizaba sólo cincuenta. Finalmente, se hizo la prueba contraria, es decir, se jugaron quince partidas en las que el agente de la red neuronal realizaba cien iteraciones y el agente original realizaba cincuenta. En todas las partidas simuladas el agente que hacía uso de la red neuronal utilizaba las fichas negras y su adversario las fichas blancas, lógicamente.
 
@@ -276,19 +276,37 @@ Además de los resultados finales, debido a la posibilidad de poder observar los
     \end{itemize}
 \end{itemize}
 
+(Estas mediciones se realizaron de manera manual y no se midieron todos los movimientos realizados de todas las partidas, sólo algunos de la mayoría de partidas que servirían como muestras representativas).
+
 Por otro lado, fue posible detectar cuándo uno de los agentes no elegía el mejor movimiento a ojos de un humano (es decir, el movimiento que capturaría más fichas o un movimiento que no pondría en riesgo muchas de las fichas propias). Aunque esto no es algo realmente concluyente en este apartado de pruebas "IA contra IA", puesto que el mejor movimiento a los ojos de un humano no tiene por qué ser el mejor movimiento posible. Por ello, vimos necesario realizar las pruebas "IA contra humano" con el fin de averiguar si esos movimientos podían ser malas jugadas por parte de los agentes (malas jugadas de las que un humano sí se puede percatar) o buenas jugadas que fueron determinantes para la victoria del agente en cuestión y, por ende, el agente tenía un mayor dominio del juego de Otelo que una persona no experimentada en él (aunque tampoco desconocedora).
 
-\subsubsection{Pruebas IA contra humano}
-para evaluar la efectividad del agente MCTS (con red neuronal) a la hora de enfrentarse a un humano se jugaron cinco partidas contra dicho agente. Cabe recalcar que el usuario que realizó las pruebas no fue en absoluto una persona experimentada en el juego de Otelo; aunque esta persona sí conocía las reglas de Otelo, sí había jugado anteriormente y múltiples veces contra sistemas ajenos a este trabajo y, supuestamente, más refinados y sí trataba de colocar fichas de la manera adecuada, sin realizar acciones al azar. En estas pruebas, el jugador humano usó las fichas negras y el agente las fichas blancas.
+\subsection{Pruebas IA contra humano}
+Para evaluar la efectividad del agente MCTS (con red neuronal) a la hora de enfrentarse a un humano se jugaron cinco partidas contra dicho agente. Cabe recalcar que el usuario que realizó las pruebas no fue en absoluto una persona experimentada en el juego de Otelo; aunque esta persona sí conocía las reglas de Otelo, sí había jugado anteriormente y múltiples veces contra sistemas ajenos a este trabajo y, supuestamente, más refinados y sí trataba de colocar fichas de la manera adecuada, sin realizar acciones al azar. En estas pruebas, el jugador humano usó las fichas negras y el agente las fichas blancas.
 
 El resultado de las partidas fue de tres victorias para el humano y dos victorias para el agente. El balance de fichas (desde el punto de vista del humano) fue de -2, +26, -20, +16 y +34, es decir, una derrota ajustada, una derrota amplia y tres victorias también amplias.
 
 \section{Conclusiones}
-Resume lo aprendido, dificultades enfrentadas, mejoras posibles.
+El algoritmo de Monte Carlo Tree Search es un algoritmo bastante eficiente para el desarrollo de agentes capaces de jugar a juegos de estrategia deterministas y conocidos como lo es el Otelo. Elige los movimientos a realizar en base a pruebas empíricas, pues las partidas simuladas que juega antes de tomar una decisión son partidas perfectamente realistas que sí pueden hacer ver que un movimiento es probable que lleve a una victoria o una derrota. Aunque no sólo eso, sino que hemos podido comprobar que es posible mejorarlo implementando una red neuronal para que el agente no se limite a realizar acciones aleatorias en las simulaciones y hemos sido capaces de ver su efectividad contra un agente que no hace uso de la mencionada red neuronal. A su vez, modificando las distintas iteraciones a realizar por ambos agentes, hemos comprobado que el agente de la red neuronal consigue un balance general de victorias positivo en todos los casos, siendo el más aplastante el de las cien iteraciones (mayor número de victorias y mejor balance general con catorce fichas, es decir, un promedio de victorias para nada ajustadas) y el menos eficiente el de sólo cincuenta iteraciones contra un agente que realiza cien, con algunos empates y un promedio de victorias ajustadas (sólo 5,6 fichas), aunque la balanza siguió inclinándose hacia el agente que hace uso de la red neuronal. 
+
+Sin embargo, es necesario tener en cuenta que, por una parte, las partidas simuladas fueron escasas debido a la tardanza de las mismas. Sólo pudimos simular cuarenta y cinco partidas en total y somos conscientes de que es muy posible realizar las mismas pruebas y obtener resultados distintos. A pesar de ello, sí creemos que esas cuarenta y cinco partidas simuladas han sido suficientes para demostrar la mejora en la eficiencia que supone el uso de la red neuronal creada para las simulaciones que hace el algoritmo MCTS.
+
+Por otra parte, no podemos obviar la tardanza del agente que hace uso de la red neuronal. El tiempo que implica usarla no es para nada despreciable, con una diferencia de uno, tres y hasta casi cinco segundos en el tiempo empleado en realizar una acción. Esto ha sido el principal motivo de la poca cantidad de partidas de prueba jugadas y creemos que es lo que hace que, a la vista de los resultados, se ponga en duda el uso de la red neuronal que hemos diseñado.
+
+Aunque, por lo menos, podemos decir que el agente es capaz de jugar una partida contra un humano de manera eficiente, siendo capaz de ganar dos de cinco partidas jugadas.
+
+En definitiva, aunque el uso de la red neuronal añade un coste computacional considerable, su integración en el agente MCTS ha demostrado ser una mejora efectiva en términos de rendimiento estratégico, sentando así una base sólida para futuras optimizaciones orientadas tanto a la velocidad como a la inteligencia del juego, especialmente a lo primero, pues es lo que más margen de mejora posee.
 
 % ---------- Bibliografía ----------
-\bibliographystyle{IEEEtran}
-\bibliography{bibliografia}
+\begin{thebibliography}{99}
+
+\bibitem{russell2020}
+S.~Russell and P.~Norvig, \emph{Artificial Intelligence: A Modern Approach}, 4th~ed. Pearson, 2020, ch.~5, ``Adversarial Search.''
+
+\bibitem{browne2012}
+C.~B.~Browne, E.~Powley, D.~Whitehouse, S.~M.~Lucas, P.~I.~Cowling, P.~Rohlfshagen, S.~Tavener, D.~Perez, S.~Samothrakis, and S.~Colton, ``A survey of Monte Carlo tree search methods,'' \emph{IEEE Transactions on Computational Intelligence and AI in Games}, vol.~4, no.~1, pp.~1--43, 2012. [Online]. Available: \url{https://ieeexplore.ieee.org/document/6145622}
+
+\end{thebibliography}
+
 
 % ---------- Fin del documento ----------
 \end{document}
